--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-   <h1 class="titulo" id="tit">HOLA MUNDO</h1>
+   <h1 class="titulo" id="tit">HOLA MUNDito</h1>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste velit id veritatis perferendis sit repellat a expedita aliquam fugiat saepe dolore blanditiis quasi eius, sed earum ea laudantium cumque omnis!</p>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus corrupti commodi quas cumque dicta, pariatur illo explicabo nesciunt laudantium magni, aut eum impedit non voluptate delectus a alias. Corporis, non?</p>
    <a href="https://www.google.com.pe/?hl=es" id="google" target="_blank">IR A GOOGLE</a>
